# extract-llama-embed

./: .gitignore  README.md  pyproject.toml
notebooks/: J01_test_embedding_gen.ipynb  J02_retrieve_chembl35_data.ipynb  J03_generate_sample_embedding.ipynb
src/scripts/: extract_embeddings.py
src/utils/: constants.py  tokens.py
